# sailboat-recurse

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
db/migrations/: 0-init.sql
scripts/: start-with-ngrok.sh
src/: activitypub.rs  config.rs  main.rs  queries.rs  request.rs  request_utils.rs  router.rs  routes.rs  server.rs  sqlite.rs  static_files.rs  templates.rs
src/activitypub/: actors.rs  feeds.rs  objects.rs  requests.rs  signature.rs
src/activitypub/objects/: actor.rs  note.rs  outbox.rs  webfinger.rs
src/db/migrations/: 0-init.sql
src/queries/: feed.rs
src/request/: global_context.rs
src/router/: debug.rs  echo.rs  feeds.rs  follow.rs  following.rs  healthcheck.rs  index.rs  login.rs  logout.rs  post.rs  posts.rs  profiles.rs  search.rs  serve_static.rs  switch.rs
src/router/feeds/: _feed_handle.rs  new.rs
src/router/posts/: _post_id.rs
src/router/profiles/: _profile_id.rs  new.rs
src/router/profiles/_profile_id/: followers.rs  following.rs  inbox.rs  outbox.rs
src/router/well_known/: webfinger.rs
src/routes/: echo.rs
src/server/: context.rs  error.rs  request.rs  response.rs  server_request.rs  server_response.rs  utils.rs
src/static/: common.css
src/templates/: 404.html  500.html  base.html  feed.html  following.html  index.html  login.html  profile.html  search.html  user-preview.html  user-search-result.html
src/templates/_partials/: feed-search-result.html  post.html  post.rs
src/templates/feeds/: _feed_handle.html  new.html
src/templates/index/: index.html  index_auth.html
src/templates/posts/: _post_id.html
src/templates/profiles/: _profile_id.html  new.html
src/templates/profiles/_profile_id/: followers.html  following.html
test/: run-tests.sh
test/integration/: echo.test.js  index.test.js  package.json  post.test.js  run-integration-tests.sh  run-tests.sh  setup.js  static.test.js  webfinger.test.js
