[package]
name = "sailboat"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
minijinja = { version = "1.0.12", features = ["multi_template", "loader"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
