[package]
name = "sailboat"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
minijinja = { version = "2.0.1", features = ["multi_template", "loader"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_html_form = "0.2.5"
serde_json = "1.0.114"
openssl = { version = "0.10", features = [] }
chrono = "0.4.35"
minijinja-embed = "1.0.14"
chrono-tz = "0.8.6"
reqwest = "0.12.2"
rand = "0.8.5"

[build-dependencies]
minijinja-embed = "1.0.14"
